@@ -7,6 +7,7 @@ S3method(nobs,clm)
 S3method(nparam,clm)
 S3method(plot,cacf)
 S3method(plot,clm)
+S3method(plot,predict.clm)
 S3method(predict,clm)
 S3method(print,cacf)
 S3method(print,summary.clm)
