@@ -10,6 +10,7 @@ Changes:
 * vcov(), confint() and summary() for clm class.
 * covar() function to produce covariance matrix from a random complex variable.
 * summary.clm() now has an option to produce real-valued parameters via complex=FALSE.
+* predict.clm() with proper prediction and confidence intervals and plot.predict.clm().
 
 
 complex v0.0.1 (Release data: 2019-07-01)
